# pyodide

./: ..pre-commit-config.yaml.swp  .bumpversion.cfg  .clang-format  .codecov.yml  .dockerignore  .editorconfig  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .gitpod.yml  .pre-commit-config.yaml  .prettierignore  .readthedocs.yml  .travis.yml  AGENT.md  AGENTS.md  CHANGELOG.md  CODE-OF-CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile-prebuilt  LICENSE  Makefile  Makefile.envs  README.md  biome.json  build-system-3.8.diff  build-system-3.8.sh  clang-format-precommit.sh  compile.sh  conftest.py  conftest_playwright.py  emscripten_syscall_ref.c  environment.yml  f2clapack.sh  index.html  lgtm.yml  main.cpp  (+21 more)
cli/: README.md  setup.cfg  setup.py
cli/doc/: Design_Document.md
cli/pyodide_cli/: __init__.py  __main__.py  app.py  build.py  build_task.py  doc.py  package.py  serve.py  task.py
pyodide-build/: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
pyodide-build/pyodide_build/: __init__.py  __main__.py  _f2c_fixes.py  _minify.py  _py_compile.py  bash_runner.py  build_env.py  buildall.py  buildpkg.py  ci_job_required.py  common.py  config.py  create_index.py  create_package_index.py  create_pypa_index.py  create_pypi_index.py  create_xbuildenv.py  doit_tasks.py  install_xbuildenv.py  io.py  logger.py  mkpkg.py  mkpkg_conda.py  mkpkg_sage.py  out_of_tree_main.py  pypabuild.py  pywasmcross.py  pyzip.py  recipe.py  rich_console.py  serve.py  testing.py  wrapper.py  xbuildenv.py  xbuildenv_releases.py
pyodide-build/pyodide_build/cli/: build.py  build_oot.py  build_recipes.py  config.py  create_zip.py  create_zipfile.py  new_package.py  py_compile.py  skeleton.py  venv.py  xbuildenv.py
pyodide-build/pyodide_build/out_of_tree/: __main__.py  build.py  pypi.py  utils.py  venv.py
pyodide-build/pyodide_build/stdlib_overrides/: platform.py
pyodide-build/pyodide_build/templates/: __init__.py  meson_cross.py
pyodide-build/pyodide_build/tests/: build-times.py  fixture.py  test_bash_runner.py  test_build_env.py  test_buildall.py  test_buildpkg.py  test_cli.py  test_cli_xbuildenv.py  test_common.py  test_config.py  test_f2c_fixes.py  test_io.py  test_mkpkg.py  test_oot_build.py  test_py_compile.py  test_pypabuild.py  test_pypi.py  test_pywasmcross.py  test_pyzip.py  test_recipe.py  test_run_docker.py  test_testing.py  test_xbuildenv.py  test_xbuildenv_releases.py
pyodide-build/pyodide_build/tests/_test_packages/libxslt/: meta.yaml
pyodide-build/pyodide_build/tests/_test_packages/pkg_1/: meta.yaml
pyodide-build/pyodide_build/tests/_test_packages/pkg_1_1/: meta.yaml
pyodide-build/pyodide_build/tests/_test_packages/pkg_2/: meta.yaml
pyodide-build/pyodide_build/tests/_test_packages/pkg_3/: meta.yaml
pyodide-build/pyodide_build/tests/_test_packages/pkg_3_1/: meta.yaml
pyodide-build/pyodide_build/tests/_test_packages/six/: meta.yaml
pyodide-build/pyodide_build/tests/_test_packages/soupsieve/: meta.yaml
pyodide-build/pyodide_build/tests/_test_packages/zlib/: meta.yaml
pyodide-build/pyodide_build/tests/_test_recipes/CLAPACK/: meta.yaml
pyodide-build/pyodide_build/tests/_test_recipes/distutils/: meta.yaml
pyodide-build/pyodide_build/tests/_test_recipes/joblib/: meta.yaml
pyodide-build/pyodide_build/tests/_test_recipes/libtest/: meta.yaml
pyodide-build/pyodide_build/tests/_test_recipes/libtest_shared/: meta.yaml
pyodide-build/pyodide_build/tests/_test_recipes/micropip/: meta.yaml
pyodide-build/pyodide_build/tests/_test_recipes/numpy/: meta.yaml
pyodide-build/pyodide_build/tests/_test_recipes/packaging/: meta.yaml
pyodide-build/pyodide_build/tests/_test_recipes/pkg_1/: meta.yaml
pyodide-build/pyodide_build/tests/_test_recipes/pkg_1_1/: meta.yaml
pyodide-build/pyodide_build/tests/_test_recipes/pkg_2/: meta.yaml
pyodide-build/pyodide_build/tests/_test_recipes/pkg_3/: meta.yaml
pyodide-build/pyodide_build/tests/_test_recipes/pkg_test_disabled/: meta.yaml
pyodide-build/pyodide_build/tests/_test_recipes/pkg_test_disabled_child/: meta.yaml
pyodide-build/pyodide_build/tests/_test_recipes/pkg_test_executable/: meta.yaml
pyodide-build/pyodide_build/tests/_test_recipes/pkg_test_graph1/: meta.yaml
pyodide-build/pyodide_build/tests/_test_recipes/pkg_test_graph2/: meta.yaml
pyodide-build/pyodide_build/tests/_test_recipes/pkg_test_graph3/: meta.yaml
pyodide-build/pyodide_build/tests/_test_recipes/pkg_test_tag/: meta.yaml
pyodide-build/pyodide_build/tests/_test_recipes/pkg_test_tag_always/: meta.yaml
pyodide-build/pyodide_build/tests/_test_recipes/pyparsing/: meta.yaml
pyodide-build/pyodide_build/tests/replace_so_abi_tags_test_package/: pyproject.toml
pyodide-build/pyodide_build/tests/utils/: mock_emscripten.sh.tmpl
pyodide-build/pyodide_build/tools/: emscripten.meson.cross  pyo3_config.ini
pyodide-test-runner/: README.md  conftest.py  setup.cfg
pyodide-test-runner/pyodide_test_runner/: __init__.py  browser.py  decorator.py  fixture.py  hook.py  hypothesis.py  node_test_driver.js  server.py  utils.py
pyodide-test-runner/pyodide_test_runner/tests/: test_decorator.py  test_jsassert.py  test_testing.py
src/py/: README.md  _pyodide_core.py  _ssl.py  js.pyi  pyproject.toml  setup.cfg  setup.py  ssl.py  webbrowser.py
src/py/_pyodide/: __init__.py  _base.py  _core.py  _core_docs.py  _future_helper.py  _importhook.py  camel_to_snake.py  console.py  docs_argspec.py  docstring.py  jsbind.py
src/py/lib/: _multiprocessing.py  pystone.py  webbrowser.py
src/py/pyodide/: __init__.py  _base.py  _browser_apis.py  _continulet.py  _core.py  _nodesock_transport.py  _package_loader.py  _run_js.py  _state.py  _util.py  browser.py  code.py  common.py  console.py  continulet.py  ffi.py  http.py  package_loader.py  runtime.py  utils.py  webloop.py
src/py/pyodide-py/pyodide/: __init__.py
src/py/pyodide/ffi/: __init__.py  wrappers.py
src/py/pyodide/http/: __init__.py  _exceptions.py  _pyfetch.py  _pyxhr.py  _utils.py  exceptions.py  pyfetch.py  pyxhr.py
src/py/pyodide/tests/: test_runtime.py
(+1261 files in other folders)
