[metadata]
name = pyodide-build
version = attr: pyodide_build.__version__
author = Pyodide developers
description = "Tools for building Pyodide"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pyodide/pyodide
project_urls =
    Bug Tracker = https://github.com/pyodide/pyodide/issues
    Documentation = https://pyodide.org/en/stable/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.10
install_requires =
    pyyaml
    cython<3.0
    ruamel.yaml
    packaging
    wheel
    tomli
    build==0.7.0
    virtualenv
    pydantic>=1.10.2
    pyodide-cli>=0.2.0
    cmake
    auditwheel-emscripten==0.0.8

[options.entry_points]
console_scripts =
    pyodide-build = pyodide_build.__main__:main
    _pywasmcross = pyodide_build.pywasmcross:compiler_main
pyodide.cli =
    build = pyodide_build.cli.build_oot:main
    venv = pyodide_build.cli.venv:main
    skeleton = pyodide_build.cli.skeleton:app

[options.extras_require]
test =
    pytest
    pytest-pyodide

[options.packages.find]
where = .
