[metadata]
name = pyodide-build
version = attr: pyodide_build.__version__
author = Pyodide developers
description = "Tools for building Pyodide"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pyodide/pyodide
project_urls =
    Bug Tracker = https://github.com/pyodide/pyodide/issues
    Documentation = https://pyodide.org/en/stable/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent
license = MPL-2.0
license_files =
   LICENSE

[options]
package_dir =
    = .
packages = find_namespace:
python_requires = >=3.10
install_requires =
    pyyaml
    cython<3.0
    ruamel.yaml
    packaging
    wheel
    tomli
    build==0.7.0
    virtualenv
    pydantic>=1.10.2
    pyodide-cli~=0.2.1
    cmake>=3.24
    unearth~=0.6
    requests
    types-requests
    typer
    auditwheel-emscripten~=0.0.9
    resolvelib
    rich
    loky


[options.entry_points]
console_scripts =
    pyodide-build = pyodide_build.__main__:main
pyodide.cli =
    build = pyodide_build.cli.build:main
    build-recipes = pyodide_build.cli.build_recipes:recipe
    venv = pyodide_build.cli.venv:main
    skeleton = pyodide_build.cli.skeleton:app
    py-compile = pyodide_build.cli.py_compile:main
    config = pyodide_build.cli.config:app
    create-zipfile = pyodide_build.cli.create_zipfile:main
    xbuildenv = pyodide_build.cli.xbuildenv:app

[options.extras_require]
test =
    pytest
    pytest-pyodide==0.52.1
deploy =
    boto3
    moto

[options.packages.find]
where = .
exclude =
    pyodide_build.tests

[options.package_data]
pyodide_build.tools =
    *.ini
pyodide_build.tools.cmake.Modules.Platform =
    *.cmake
