[metadata]
name = pyodide-test-runner
version = 0.21.0.dev0
author = Pyodide developers
description = "Pytest plugin for testing Pyodide and third-party applications that use Pyodide"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pyodide/pyodide
project_urls =
    Bug Tracker = https://github.com/pyodide/pyodide/issues
    Documentation = https://pyodide.org/en/stable/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent
    Framework :: Pytest

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.10
include_package_data = True
install_requires =
    pexpect
    pytest
    pytest-asyncio
    selenium==4.1.0
    tblib

[options.package_data]
pyodide_test_runner = *.js

[options.entry_points]
pytest11 =
    pyodide_test_runner = pyodide_test_runner.fixture
    pyodide_test_runner_hook = pyodide_test_runner.hook

[options.packages.find]
where = .
