[metadata]
name = pyodide-py
version = 0.22.0
author = Pyodide developers
description = "A Python package providing core interpreter functionality for Pyodide."
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pyodide/pyodide
project_urls =
    Bug Tracker = https://github.com/pyodide/pyodide/issues
    Documentation = https://pyodide.org/en/stable/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.8

[options.packages.find]
where = .
